--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -1,3 +1,24 @@
 // Place all the styles related to the Posts controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.postHeader {
+  height: 60px;
+  background: #ffffff;
+  border: 1px solid #e6e6e6;
+  display: flex;
+  padding: 20px;
+  box-sizing: border-box;
+  align-items: center;
+  border-radius: 3px 3px 0px 0px;
+}
+
+.postBox {
+  margin: 79px auto;
+  font-family: 'Roboto', sans-serif;
+  font-size: 14px; 
+  width: 75%;
+  position: relative;
+  top: 50px;
+}
+
