--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -11,14 +11,34 @@
   box-sizing: border-box;
   align-items: center;
   border-radius: 3px 3px 0px 0px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.rightSideHeader {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.fa-user-edit {
+  margin-right: 20px;
+}
+
+.fa-trash-alt {
+
 }
 
 .postBox {
   margin: 79px auto;
   font-family: 'Roboto', sans-serif;
-  font-size: 14px; 
+  font-size: 16px; 
   width: 75%;
   position: relative;
   top: 50px;
 }
+
+// .image {
+
+// }
 
