--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -25,9 +25,9 @@
   margin-right: 20px;
 }
 
-.fa-trash-alt {
+// .fa-trash-alt {
 
-}
+// }
 
 .postBox {
   margin: 79px auto;
@@ -38,7 +38,9 @@
   top: 50px;
 }
 
-// .image {
-
-// }
+.image {
+  max-width: 100%;
+  max-height: 100%;
+  image-orientation: from-image;
+}
 
