--- a/app/assets/stylesheets/upload_post.scss
+++ b/app/assets/stylesheets/upload_post.scss
@@ -47,6 +47,10 @@
 }
 
 .fileUploadButton {
+  align-items: center;
+}
+
+.fileUploadDiv {
   width: 200px;
   background-color: #468fdc;
   height: 40px;
@@ -55,13 +59,42 @@
   display: flex;
   justify-content: center;
   text-align: center;
+  align-items: center;
 }
 
-.fileUploadDiv {
-  margin-top: 20px;
-  margin-bottom: 20px;
-  // display: flex;
-  // justify-content: center;
-  display: inline-block;
-  vertical-align: middle; 
+.fileUploadText {
+  align-self: center;
 }
+
+.submitUploadButton {
+  width: 200px;
+  background-color: #468fdc;
+  height: 40px;
+  color: white;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+}
+
+.fileUploadDivParent {
+  display: flex;
+  justify-content: center;
+}
+
+.submitUploadButtonParent {
+  display: flex;
+  justify-content: center;
+}
+
+// .fileUploadDiv {
+//   // display: flex;
+//   // justify-content: center;
+//   margin-top: 20px;
+//   margin-bottom: 20px;
+//   // display: flex;
+//   // justify-content: center;
+//   display: inline-block;
+//   vertical-align: middle; 
+// }
