Add css and a home profile page

--- a/app/assets/stylesheets/upload_post.scss
+++ b/app/assets/stylesheets/upload_post.scss
@@ -60,6 +60,7 @@
   justify-content: center;
   text-align: center;
   align-items: center;
+  border-radius: 5px;
 }
 
 .fileUploadText {
@@ -76,6 +77,7 @@
   justify-content: center;
   text-align: center;
   align-items: center;
+  border-radius: 5px;
 }
 
 .fileUploadDivParent {
