Add styling to some buttons

--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -36,7 +36,7 @@
   width: 45%;
   position: relative;
   top: 50px;
-  background-color: #fafafa;
+  // background-color: #fafafa;
 }
 
 .image {
@@ -45,9 +45,18 @@
   image-orientation: from-image;
 }
 
+.editCaptionParent {
+  // margin: 79px auto;
+  font-family: 'Roboto', sans-serif;
+  font-size: 16px; 
+  width: 100%;
+  position: relative;
+  // top: 50px;
+}
+
 .editCaption {
   background: #ffffff;
-  width: 400px;
+  width: 100%;
   height: 100px;
   resize: none;
   border: 1px solid #e6e6e6;
@@ -86,6 +95,8 @@
 .postCaption {
   display: flex;
   flex-direction: flex-start;
+  width: 100%;
+  height: 100px;
   // align-items: center;
 }
 
@@ -106,4 +117,20 @@
   margin-top: 10px;
   margin-bottom: 10px;
   font-size: 12px;
+}
+
+.editSubmitParent {
+  display: flex;
+  justify-content: center;
+  background-color: #468fdc;
+  color: white;
+  margin: 10px;
+  // padding: 6px;
+  height: 30px;
+  border-radius: 2px;
+  border: none;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: 14px;
+  width: 75%;
+  // margin-left: 20px;
 }
